syntax = "proto3";

package chordMessages;

message SendIdMessage {
	string id = 1;
}

message FingerMessage {
	string address = 1;
	string id = 2;
}

message PredecessorMessage {
	FingerMessage predecessor = 1;
}

message SendFingersMessage {
	repeated FingerMessage fingers = 1;
}


message ChordMessage {
	Command cmd = 1;
	PredecessorMessage cpmsg = 2;
	SendIdMessage sidmsg = 4;
	SendFingersMessage sfmsg = 5;

	enum Command {
		Ping = 0;
		Pong = 1;
		GetPredecessor = 2;
		GetId = 3;
		GetFingers = 4;
		ClaimPredecessor = 5;
		GetSuccessor = 6;
	};
}

message NetworkMessage {
	uint32 proto = 1;
	string msg = 2;
}
